# shady

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  app.py  docker-compose.example.yml  flake.nix  pyproject.toml
.github/workflows/: publish.yml
templates/: index.html
