[project]
name = "shady"
version = "0.1.0"
description = "Dashboard for docker containers and uploaded static files"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "docker>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

